User Story: None.  Incidental fix for scrollbars in textarea. Reviewed by: pending.
This changes the css used by textarea html elements.  Previously, each textarea had a scrollbar, even when the content was empty.  This fix hides the scrollbar until the content in the textarea is large enough to require scrolling.

--- a/software/caintegrator2-war/web/common/css/caintegrator2.css
+++ b/software/caintegrator2-war/web/common/css/caintegrator2.css
@@ -53,7 +53,7 @@ H4
 LABEL
 { font-family:arial,helvetica,sans-serif; color:#333; font-weight:bold; font-style:normal; text-align:right; padding:3px 0 0 0 }
 TEXTAREA
-{ font-family:arial,helvetica,sans-serif; font-size:100%; overflow:auto; overflow:-moz-scrollbars-vertical; }
+{ font-family:arial,helvetica,sans-serif; font-size:100%; autoScroll:true; overflow:auto; height:60px; }
 INPUT, SELECT, TEXTAREA
 { font-family:arial,helvetica,sans-serif; color:#333; font-size:100%;  }
 INPUT
